--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="app.js"></script>
+    <script src="condicoes_e_concatenacao/app.js"></script>
 </body>
 
 </html>
